--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,7 @@ PORT=
 MONGO_URI=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+TEST_VAR=
